<resources>
    <string name="app_name">제콜로라</string>
    <string name="seven_eleven">세븐일레븐</string>
    <string name="cu">CU</string>
    <string name="gs25">GS25</string>
    <string name="emart24">이마트24</string>
    <string name="favorite_product">자주 찾는 상품</string>
    <string name="new_product">신규 상품</string>
    <string name="event_period">행사기간</string>
    <string name="compare_product">같은상품 비교하기</string>
    <string name="empty_favorite_products">텅텅~~</string>
</resources>