<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="검색"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_input_hint"
            app:layout_constraintEnd_toEndOf="@id/tv_input_hint"
            app:layout_constraintTop_toTopOf="@id/tv_input_hint" />

        <TextView
            android:id="@+id/tv_input_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_gray_stroke"
            android:paddingVertical="16dp"
            android:paddingStart="16dp"
            android:text="검색명을 입력하세요"
            android:textColor="@color/bk_03"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_black_stroke"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/cu"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_gs25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_input_hint" />

        <TextView
            android:id="@+id/tv_gs25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_black_stroke"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/gs25"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_seven_eleven"
            app:layout_constraintStart_toEndOf="@id/tv_cu"
            app:layout_constraintTop_toTopOf="@id/tv_cu" />

        <TextView
            android:id="@+id/tv_seven_eleven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_black_stroke"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/seven_eleven"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_ministop"
            app:layout_constraintStart_toEndOf="@id/tv_gs25"
            app:layout_constraintTop_toTopOf="@id/tv_cu" />

        <TextView
            android:id="@+id/tv_ministop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_black_stroke"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/ministop"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_seven_eleven"
            app:layout_constraintTop_toTopOf="@id/tv_cu" />

        <TextView
            android:id="@+id/tv_favorite_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/favorite_product"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_cu"
            app:layout_constraintTop_toBottomOf="@id/tv_cu" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_favorite_product" />

        <TextView
            android:id="@+id/tv_new_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="31dp"
            android:text="@string/new_product"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_favorite_product" />

        <TextView
            android:id="@+id/tv_one_plus_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_black_stroke"
            android:gravity="center"
            android:paddingVertical="3dp"
            android:text="1+1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_two_plus_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_new_product" />

        <TextView
            android:id="@+id/tv_two_plus_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_black_stroke"
            android:gravity="center"
            android:paddingVertical="3dp"
            android:text="2+1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_three_plus_one"
            app:layout_constraintStart_toEndOf="@id/tv_one_plus_one"
            app:layout_constraintTop_toTopOf="@id/tv_one_plus_one" />

        <TextView
            android:id="@+id/tv_three_plus_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_black_stroke"
            android:gravity="center"
            android:paddingVertical="3dp"
            android:text="3+1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_four_plus_one"
            app:layout_constraintStart_toEndOf="@id/tv_two_plus_one"
            app:layout_constraintTop_toTopOf="@id/tv_one_plus_one" />

        <TextView
            android:id="@+id/tv_four_plus_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_black_stroke"
            android:gravity="center"
            android:paddingVertical="3dp"
            android:text="4+1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_three_plus_one"
            app:layout_constraintTop_toTopOf="@id/tv_one_plus_one" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_new_product"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_one_plus_one" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>